assets/css/style.css
/* ... */
.text-italic {
  font-style: italic;
}
/* Responsive typography */
@media (max-width: 767px) {
  h1 {
    font-size: 26px;
    line-height: 36px;
  }
  h1 small {
    font-size: 18px;
  }
  h2 {
    font-size: 23px;
    line-height: 36px;
  }
  h2 small {
    font-size: 16px;
  }
  h3 {
    font-size: 20px;
    line-height: 36px;
  }
  h3 small {
    font-size: 16px;
  }
  blockquote {
    padding-left: 24px;
  }
  blockquote:before {
    left: 0;
  }
  .super {
    font-size: 48px;
    text-align: center;
  }
  .super small {
    margin-top: 12px;
    display: block;
  }
  .hyper {
    font-size: 60px;
  }
  .small-screen-center {
    text-align: center !important;
  }
  .small-screen-margin-bottom {
    margin-bottom: 24px !important;
  }
}
@media (max-width: 480px) {
  .super {
    font-size: 36px;
    line-superheight: 1em;
  }
  .hyper {
    font-size: 48px;
    line-height: 1em;
  }
  .lead {
    font-size: 16px;
  }
}
@media (max-width: 320px) {
  body {
    font-size: 16px;
  }
  h1 {
    font-size: 23px;
    line-height: 24px;
  }
  h1 small {
    font-size: 16px;
  }
  h2 {
    font-size: 20px;
    line-height: 24px;
  }
  h2 small {
    font-size: 14px;
  }
  h3 {
    font-size: 18px;
    line-height: 24px;
  }
  h3 small {
    font-size: 13px;
  }
  .super {
    font-size: 24px;
    line-height: 1;
  }
  .hyper {
    font-size: 36px;
  }
}
/* ------------ */
/* THEME COLORS */
/* ------------ */
body {
  color: #424143;
}
h1,
h2,
h3,
h4,
h5,
h6,
.lead {
  color: #1e1e1f;
}
/*a {
  color: #807f83;
  border-color: #807f83;
}
a:hover {
  color: #67666a;
  border-color: #67666a;
}*/
blockquote:before {
  background: #57ad68;
}
.post-title {
  color: #807f83;
}
.post-info {
  color: #67666a;
}
.pagination {
  color: #67666a;
}
.bordered-top:after,
.bordered-bottom:after {
  background-color: #cbc9cf;
}
.social-icons a {
  color: #cbc9cf;
  background-color: rgba(255, 255, 255, 0.35);
}
.social-icons a:hover {
  background-color: rgba(255, 255, 255, 0.15);
}
.overlay:after {
  background-color: rgba(0, 0, 0, 0.5);
}
/*#masthead {
  background-color: #1e1e1f;
  background-attachment: fixed;
}*/
#footer,
#masthead {
  color: #fff;
}
#footer h1,
#masthead h1,
#footer h2,
#masthead h2,
#footer p,
#masthead p {
  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.75);
}
#footer h1,
#masthead h1,
#footer h2,
#masthead h2,
#footer a,
#masthead a,
#footer p,
#masthead p {
  color: #fff;
}
/* ----------- */
/* BLOG HEADER */
/* ----------- */
/* - General body rules for setting up the heights - */
body,
html {
  height: 100%;
  max-height: 100%;
  /*background-color: #f7f7f7;*/
  /*background-color: #e1ecf4;*/
  /*background-color: #f0fdfd;*/
  background-color: #fefeed;
}
/* - Blog and post headers - */
#masthead {
  position: relative;
  /*background-position: left top;*/
  background-position: center;
  /*background-attachment: scroll;*/
  background-attachment: fixed;
  display: table;
  text-align: center;
  height: 50%;
  width: 100%;
  padding: 0;
  margin-bottom: 48px;
  box-sizing: border-box;
}
#masthead.align-left {
  text-align: left;
}
#masthead.align-right {
  text-align: right;
}

/*@media (max-width: 1024px) {
  #masthead {
    background-attachment: scroll;
  }
}*/
/* - Brand - */
.brand img {
  max-height: 180px;
  opacity: 0.80;
  filter: alpha(opacity=80);
}

.brand img:hover {
  opacity: 1;
  filter: alpha(opacity=100);
}

/* - Blog title and description - */
.blog-title {
  font-size: 64px;
  line-height: 64px;
  text-transform: uppercase;
  margin-bottom: 12px;
}
.blog-title span {
  display: block;
}
.blog-description {
  text-transform: none;
  padding-top: 24px;
  margin-top: 24px;
  margin-bottom: 24px;
  margin-bottom: 24px;
  font-size: 24px;
  font-style: italic;
}
#main {
  position: relative;
  z-index: 1;
}
@media (max-width: 480px) {
  .brand img {
    max-height: 60px;
  }
  .blog-title {
    font-size: 24px;
    line-height: 24px;
  }
  .blog-description {
    display: none;
  }
  .image-credit {
    display: none;
  }
  .home-template .row {margin: 0 -5px;} /* fixes overflow on homepage on small screens (caused by stacked -15px from bootstrap) */
}
/* ----------- */
/* POST STYLES */
/* ----------- */
/* - Post title - */
.post-title {
  margin-top: 0;
  margin-bottom: 12px;
  padding-bottom: 12px;
}
/* - Post info - */
.post-info {
  margin-bottom: 24px;
}
/* -- Post Tags -- */
/* -  Post Body - */
.post-body {
  padding-bottom: 72px;
  margin-bottom: 72px;
}
.post-template .post-body {
  padding-bottom: 36px;
  margin-bottom: 24px;
}
.post-body img {
  max-width: 100%;
  margin-bottom: 24px;
}
.post-body a {
  border-bottom: 1px dotted;
}
.page-body img {
  max-width: 100%;
  margin-bottom: 24px;
  border-radius: 5px;
}
/* - Post Share - */
.post-share {
  margin-bottom: 48px;
}
/* - Post Author - */
.post-author {
  margin-bottom: 72px;
}
.post-author h4 {
  margin-top: 0;
  margin-bottom: 12px;
  padding-bottom: 12px;
}
/* - Post Avatar - */
.post-avatar {
  max-width: 150px;
  margin: 0 auto 12px;
}
/* -  Pagination - */
.pagination {
  display: block;
  position: relative;
}
.older-posts,
.newer-posts {
  display: block;
  position: absolute;
  top: 0;
}
.older-posts {
  right: 0;
}
.newer-posts {
  left: 0;
}
@media (max-width: 480px) {
  .older-posts,
  .newer-posts {
    position: relative;
  }
}
/* ------ */
/* FOOTER */
/* ------ */
#footer {
  margin-top: 72px;
  padding: 124px 0 72px;
  position: relative;
  width: 100%;
  height: 60%;
  display: table;
  z-index: 1;
}
#footer .container {
  position: relative;
  z-index: 2;
}
/* ---------------- */
/* THEME UTILITITES */
/* ---------------- */
/* - Decor -*/
.decor-wrapper {
  width: 100%;
  height: 50%;
  position: absolute;
  left: 0;
  bottom: 0;
}
#footer .decor-wrapper {
  bottom: auto;
  top: 0;
}
@media (max-width: 767px) {
  .decor-wrapper {
    max-height: 150px;
  }
}
@media (max-width: 480px) {
  .decor-wrapper {
    max-height: 100px;
  }
}
/* ... */

